Little changes again

--- a/problemes.html
+++ b/problemes.html
@@ -5,6 +5,7 @@
         body {
             background-color: white;
             color: black;
+            margin: 0 2em;
         }
     </style>
     <meta charset="UTF-8">
@@ -12,8 +13,8 @@
     <title>Examen UF3</title>
 </head>
 <body>
-    <main>
-        <section>
+    <main role="main">
+        <article role="article">
             <h2>El problema dels tres cossos</h2>
 
             <p>El problema dels tres cossos és un problema fonamental en mecànica celeste que consisteix a determinar les trajectòries de tres masses puntuals que interactuen a través de la força de gravetat. Va ser plantejat per primera vegada per Isaac Newton, però no es va poder resoldre de manera analítica.
@@ -21,7 +22,10 @@
             El problema dels tres cossos pot donar lloc a diversos fenòmens interessants:
             Captura temporal, col·lisions, o fins i tot expulsions de cossos del sistema.</p>
 
-            <img src="img/6981206097_ae17eb0eb8_b.jpg" alt="El problema dels tres cossos amb llicencia lliure" width="300px" height="300px"/>
+            <img src="img/6981206097_ae17eb0eb8_b.webp" 
+            alt="Es pot apreciar en la imatge un home vell sent acusat per una ma del cel, no se que es o significa, pero poso aquest texte per descriure l'imatge"
+            title="El problema dels tres cossos amb llicencia lliure"
+            width="300px" height="300px"/>
 
             <p>Relacionat:</p>
             <ul>
@@ -33,11 +37,11 @@
                 </li>
             </ul>
 
-            <span>Podeu trobar més informació relacionada <a href="webfalsa.3cossos">aquí</a></span>
+            <a href="webfalsa.3cossos" target="_blank" title="Enllaç d'informació sobte el problema dels tres cossos">Podeu trobar més informació relacionada aquí</a>
             
-        </section>
+        </article>
         <hr>
-        <section>
+        <article role="article">
             <h2>Universos paral·lels i multidimensió</h2>
                 
             <p>El concepte d'universos paral·lels i multidimensió és una idea fascinant que ha estat objecte d'investigació en física teòrica i cosmologia. Aquests conceptes es refereixen a l'existència de més d'un univers o realitats alternatives que poden coexistir amb el nostre univers.
@@ -56,11 +60,11 @@
 
             <p>Els investigadors en física quàntica han proposat diverses teories sobre la possibilitat d'universos paral·lels. Algunes d'aquestes teories involucren l'existència de múltiples dimensions, que podrien ser més enllà de les tres dimensions espacials que coneixem. 
             Si bé aquest és un camp de recerca actualment actiu, encara no s'han confirmat experimentalment les teories sobre universos paral·lels o multidimensionals.
-            Podeu trobar més informació relacionada <a href="webtambefalsa.oa">aquí</a></p>
+            <a href="webfalsa.3cossos" target="_blank" title="Enllaç d'informació sobte universos paral·lels i multidimensió">Podeu trobar més informació relacionada aquí</a></p>
 
-            <button>Vols jugar?</button>
+            <button role="button">Vols jugar?</button>
 
-        </section>
+        </article>
     </main>
 </body>
 </html>
