--- a/problemes.html
+++ b/problemes.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
 <html lang="ca">
     <head>
-        <style>
-            body {
-                background-color: white;
-                color: black;
-                margin: 0 2em;
-            }
-        </style>
+        <link rel="stylesheet" href="css/css.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Examen UF3</title>
@@ -65,7 +59,7 @@
                 <a href="webfalsa.3cossos" target="_blank" title="Enllaç d'informació sobte universos paral·lels i multidimensió"
                 aria-label="Enllaç d'informació sobte el problema dels tres cossos">Podeu trobar més informació relacionada aquí</a></p>
 
-                <button role="button">Vols jugar?</button>
+                <button role="button" aria-label="Et pregunta si vols jugar">Vols jugar?</button>
             </article>
         </main>
     </body>
